2002-05-15  John Levon  <moz@compsoc.man.ac.uk>

	* pp/Makefile.in:
	* pp/op_time.cpp:
	* pp/op_to_source.cpp:
	* pp/oprofpp.cpp:
	* pp/samples_container.h:
	* pp/samples_container.cpp:
	* pp/sample_container_imp.h:
	* pp/sample_container_imp.cpp:
	* pp/symbol_container_imp.h:
	* pp/symbol_container_imp.cpp:
	* pp/symbol_functors.h: some more file-refactoring, and some
	  minor changes
 
2002-05-15  John Levon  <moz@compsoc.man.ac.uk>

	* pp/oprofpp.cpp: only allow -r with -l
	* doc/oprofile.1.in: document -r for oprofpp
 
2002-05-15  Will Cohen  <wcohen@nc.rr.com>
 
	* pp/oprofpp.cpp: Added "-r" reverse sort option.

2002-05-15  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/utility.h: fix a copyright problem, work-around
	  a (probable) gcc 2.91 bug.

	* pp/op_bfd.cpp: valgrind exposed a delete problem.

	* pp/op_time.cpp:
	* pp/op_to_source.cpp:
	* pp/oprofpp.cpp:
	* pp/samples_container.cpp:
	* pp/samples_container.h:
	* pp/samples_container.cpp:
	* pp/samples_container.h: change the handling of shared lib,
	  we no longer allow samples_container_t to auto load related
	  samples files belonging to a shared lib but we create at a higher
	  level an explicit list of samples files : fix #555276


	* pp/op_to_source.cpp:
	* pp/sample_container.cpp:
	* pp/opp_symbol.cpp: demangle symbol only when we output
	  symbol name, not when we store symbol name in internal
	  representation of symbol.

2002-05-14  Cliff Woolley  <jwoolley@apache.org>

	* gui/oprof_start.cpp: allow Qt3 compilation

2002-05-13  Philippe Elie  <phil.el@wanadoo.fr>

	* doc/oprofile/xml: clarify RTC use, fix #555302

	* gui/oprof_start_util.cpp: missing closedir(). Fix #555268
	  Thanks to William Cohen for his precise report.

	* module/Makefile.in: fix #555304, a non-native compiler can
	  fail to compile oprofile

	* libutil++/utility.h: class noncopyable
	* pp/samples_file.h: use it

2002-05-12  Philippe Elie  <phil.el@wanadoo.fr>

	* libop/op_events_desc.c:
	* libop/op_events_desc.h:
