@@ -15,6 +15,8 @@
 #include <errno.h>
  
 #include <sys/unistd.h>
+#include <sys/types.h>
+#include <signal.h>
  
 /**
  * op_read_lock_file - read a lock file
@@ -45,15 +47,27 @@ pid_t op_read_lock_file(char const * file)
 /**  
  * op_write_lock_file - write a lock file
  * \return errno on failure, or 0 on success
- * 
- * Write the pid into the given lock file.
+ *
+ * Write the pid into the given lock file. Stale
+ * lock files are detected and reset.
  */ 
 int op_write_lock_file(char const * file)
 {
 	FILE * fp;
 
-	if (op_get_fsize(file, 0) != 0)
-		return EEXIST;
+	if (op_get_fsize(file, 0) != 0) {
+		pid_t pid = op_read_lock_file(file);
+ 
+		if (kill(pid, 0)) {
+			int err = unlink(file);
+			fprintf(stderr, "Removing stale lock file %s\n",
+				file);
+			if (err)
+				return err;
+		} else {
+			return EEXIST;
+		}
+	}
  
 	fp = fopen(file, "w");
 	if (!fp)
