@@ -1,3 +1,10 @@
+2002-05-16  John Levon  <moz@compsoc.man.ac.uk>
+
+	* libutil/op_lockfile.c: detect and remove stale
+	  lock files
+
+	* utils/op_start: detect stale lock file
+ 
 2002-05-15  John Levon  <moz@compsoc.man.ac.uk>
 
 	* pp/Makefile.in:
